# shuttle-vue-demo

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy.yml
API/: .gitignore  Cargo.toml  README.md  Secrets.toml  Shuttle.toml
API/.shuttle/: config.toml
API/examples/: bili.rs  fy.rs
API/public/: index.html
API/public/assets/: CanvasDrawGif-BadYDa8w.js  CanvasDrawGif-CPCjKVY5.js  CanvasDrawGif-CdDhsaCp.js  CanvasDrawGif-D7Q0D67n.js  CanvasDrawGif-ifc8q_Tf.js  QRDecoder--yWevYpz.js  QRDecoder-B6V1bjRz.js  QRDecoder-BVp8einp.js  QRDecoder-BeA8lvs-.js  QRDecoder-CY467aZj.js  SpeechRecognition-B7fVdipM.js  SpeechRecognition-Bfy7ZhDC.css  SpeechRecognition-BxHW_4Vo.js  SpeechRecognition-DNCysioT.js  SpeechRecognition-DY-SYzrG.js  SpeechRecognition-Rmt4rWKB.js  WebNavigation-BUNvUj6p.js  WebNavigation-Br-wN7Km.js  WebNavigation-CJLWNEbn.js  WebNavigation-CNOmEKhM.js  WebNavigation-D1xUBuLr.css  WebNavigation-DDGhbFpH.js  WebNavigation-Oysrfugw.css  index-6HomX-Dx.js  index-B7JHg4ec.js  index-BtcbA90e.css  index-C1mWqWy2.js  index-CMf3grBG.js  index-Cppo2K3X.css  index-DgQqLJ_D.js
API/public/meta/: manifest.json
API/src/: lang.rs  lib.rs  main.rs  notion.rs  translate.rs  xfai.rs
public/: qr.html
src/: App.vue  demo.js  main.ts  style.css
src/router/: index.ts
src/views/: CanvasDrawGif.vue  QRDecoder.vue  SpeechRecognition.vue  WebNavigation.vue
