[package]
name = "qr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# ,features = ["static-files"]
poem = { version ="1.3.55",features = ["static-files"]}
poem-openapi = { version = "2", features = ["swagger-ui"]}
shuttle-poem = { version = "0.18.0" }
shuttle-runtime = { version = "0.18.0" }
shuttle-secrets = "0.18.0"
shuttle-static-folder = "0.18.0"
image = "0.24.5"
rqrr = "0.6.0"
anyhow = "1.0.70"
tracing = "0.1.37"
serde = {version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11.15", features = ["json", "multipart", "stream", "gzip", "deflate", "brotli","cookies"] }
lazy_static = "1.4.0"
json = "0.12.4"
tokio = "1.26.0"
regex = "1.7.2"
