[package]
name = "qr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# ,features = ["static-files"]
poem = { version ="3.1.12",features = ["static-files"]}
poem-openapi = { version = "5.1.16", features = ["swagger-ui"]}
# shuttle-service = "0.47.0"
shuttle-poem = "0.57"
shuttle-runtime = "0.57"
image = "0.25.8"
rqrr = "0.10.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json", "multipart", "stream", "gzip", "deflate", "brotli","cookies"] }
lazy_static = "1.4.0"
json = "0.12.4"
tokio = "1.26.0"
regex = "1"
encoding_rs = "0"
async-trait = "0.1"

siumai = { version = "0.10", features = ["openai"] }
notion-client = "1.0.10"
